--- a/frontend/src/assets/variables.scss
+++ b/frontend/src/assets/variables.scss
@@ -13,8 +13,12 @@
 
   --toastify-icon-color-success: var(--color-primary);
   --toastify-icon-color-error: var(--color-secondary);
+
   --height-button: 48px;
   --height-add: 48px;
+
+  --height-button-mobile: 36px;
+  --height-add-mobile: 36px;
 
   --width-container-other: 1536px;
   --width-container-desktop: 1280px;
@@ -23,6 +27,4 @@
   --width-container-mobile-s: 480px;
 
   --border-radius: 10px;
-
-
 }
