--- a/frontend/src/assets/containers/checkbox.scss
+++ b/frontend/src/assets/containers/checkbox.scss
@@ -1,5 +1,10 @@
 .checkbox {
-  display: none;
+
+  align-self: center;
+
+  &-input {
+    display: none;
+  }
 
   &-label {
     display: block;
@@ -7,10 +12,21 @@
     width: 24px;
     height: 24px;
 
+    min-width: 24px;
+    min-height: 24px;
+    align-items: center;
     text-align: center;
 
     border: 1px solid var(--color-border);
     border-radius: 50%;
+
+    @include mobile {
+      width: 16px;
+      height: 16px;
+
+      min-width: 16px;
+      min-height: 16px;
+    }
 
     &::before {
       display: inline-block;
@@ -24,10 +40,15 @@
       transform: scale(0);
       -webkit-transition: 0.3s;
       transition: 0.3s;
+
+      @include mobile {
+        font-size: 10px;
+      }
+
     }
   }
 
-  &:checked+&-label::before {
+  &-input:checked+&-label::before {
     -webkit-transform: scale(1);
     transform: scale(1);
   }
