--- a/frontend/src/assets/containers/header.scss
+++ b/frontend/src/assets/containers/header.scss
@@ -4,6 +4,14 @@
   align-items: center;
   padding: 20px;
 
+  @include mobile {
+    gap: 10px;
+    align-items: start;
+    flex-direction: column;
+
+    padding-bottom: 0;
+  }
+
   &__title {
     margin: 0;
     font-weight: bold;
