--- a/frontend/src/assets/containers/todo.scss
+++ b/frontend/src/assets/containers/todo.scss
@@ -1,7 +1,11 @@
 .todo {
   display: grid;
-  grid-template-columns: 1fr 300px;
+  grid-template-columns: 1fr 350px;
   gap: 20px;
+
+  @include tablet {
+    grid-template-columns: 1fr;
+  }
 
   &__container {
     width: 100%;
@@ -14,6 +18,44 @@
     border-radius: var(--border-radius);
 
     box-shadow: 0px 8px 8px 0px rgba(0, 0, 0, 0.2);
+
+    max-height: 85vh;
+    overflow-y: auto;
+
+    @include tablet {
+      max-height: 50vh;
+    }
+
+    @include mobile {
+      max-height: 40vh;
+    }
+
+    &.info {
+      display: flex;
+      flex-direction: column;
+      align-self: start;
+      justify-content: center;
+
+      @include tablet {
+        display: grid;
+        max-width: 550px;
+        justify-content: inherit;
+        grid-template-columns: repeat(3, 300px);
+        grid-template-areas: "pie title title""pie info info""pie info info";
+      }
+
+      @include mobile {
+
+        justify-items: center;
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: 0 1fr 1fr;
+        grid-template-areas: "title""pie""info";
+      }
+
+      @include mobile-s {
+        max-height: 35vh;
+      }
+    }
   }
 
   &__block-add {
@@ -24,6 +66,10 @@
       flex: 1;
 
       height: var(--height-add);
+
+      @include mobile {
+        height: var(--height-add-mobile);
+      }
 
       background: var(--color-bg-add);
 
@@ -75,14 +121,92 @@
         align-items: center;
         justify-content: space-between;
         max-width: 100%;
-
-
+        gap: 10px;
       }
 
       &__block {
         display: flex;
         gap: 20px;
+
+        @include tablet {
+          gap: 10px;
+          align-self: center;
+        }
       }
+
+      &__text {
+        word-break: break-all;
+
+        @include tablet {
+          word-break: break-word;
+        }
+      }
+    }
+  }
+
+  &__wrapper {
+    width: 100%;
+    height: 300px;
+
+    @include tablet {
+      grid-area: pie;
+      width: 300px;
+    }
+
+    @include mobile {
+      width: 200px;
+      height: 200px;
+    }
+
+    @include mobile-s {
+      width: 200px;
+      height: 120px;
+
+      margin-bottom: 10px;
+    }
+
+    & [role="tooltip"] {
+      background: var(--color-bg) !important;
+      color: var(--color-text) !important;
+      border-radius: var(--border-radius) !important;
+
+      span {
+        background: none !important;
+      }
+    }
+
+  }
+
+  &__block-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    grid-area: info;
+
+    @include tablet {
+      align-items: flex-start;
+      justify-content: flex-start;
+    }
+
+    &__title {
+      color: var(--color-text);
+
+      @include mobile {
+        font-size: 14px;
+      }
+    }
+  }
+
+  &__title {
+    color: var(--color-text);
+    align-self: center;
+
+    grid-area: title;
+
+    @include mobile-s {
+      display: none;
     }
   }
 }
