--- a/frontend/src/assets/globals.scss
+++ b/frontend/src/assets/globals.scss
@@ -15,6 +15,14 @@ body {
 
   background: var(--color-bg);
   color: var(--color-white);
+
+  @include mobile {
+    font-size: 12px;
+  }
+
+  @include mobile-s {
+    font-size: 10px;
+  }
 }
 
 a,
